<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroClientesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/ed_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/NombreEmpresa"
            android:inputType="text" />

        <EditText
            android:id="@+id/ed_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Correo"
            android:inputType="text"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/ed_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Telefono"
            android:inputType="text"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/ed_direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Direccion"
            android:inputType="text"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/ed_contacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/NombreContacto"
            android:inputType="text"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/btn_agregarCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/AgregarCliente"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/btn_regresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Regresar"
            android:textSize="24sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>